maintenance release 1.0.2-SNAPSHOT